# rust-bindings

./: Cargo.toml  README.md
speechprovider-rs/: Cargo.toml
speechprovider-rs/src/auto/: enums.rs  flags.rs  mod.rs  stream_writer.rs  versions.txt
speechprovider-rs/sys/: Cargo.toml  build.rs
speechprovider-rs/sys/src/: lib.rs
speechprovider-rs/sys/src/auto/: versions.txt
speechprovider-rs/sys/tests/: abi.rs  constant.c  layout.c
